<resources>
    <string name="app_name">TestTaskUsers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="company">Company</string>
    <string name="coordinates">Coordinates</string>
    <string name="registered">Registered</string>
    <string name="about">About</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="eye_color">Eye color</string>
    <string name="favorite_fruit">Favorite fruit</string>
    <string name="email">Email</string>
    <string name="friends">Friends</string>
</resources>